--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="trending.html" target="blank">Trending</a></li>
+                    <li><a href="trending.html">Trending</a></li>
                     <li><a href="about us.html">About us</a></li>
                     <li><a href="contacts.html">Contacts</a></li>
                 </ul>
@@ -27,8 +27,9 @@
         <div class="box">
             <div class="content">
     <p><h1>Laughter is the best medicine. :-)</h1></p> 
-    <p>Happiness is key to healthy living. Don't wait to suffer stress, depression or bad moods while we are here for you, making you smile.
-        We have new memes (funny images) everyday and we help you get the top trending comedies, both videos and images.  <br> <strong>Commited to making your life happier! </strong></p>
+    <p>Happiness is key to healthy living. Don't wait to suffer stress, depression or bad moods while we are here for you, <em>making you smile.</em>
+        We have new memes (funny images) everyday and we help you get the top trending comedies, both videos and images. The main aim of this website is to recommend the best comedy shows and profiles on social media. Alert  fans about gigs, when and where they will be. <br> <strong>Commited to making your life happier! </strong></p>
+      
     </div> 
 </div>
 </div>
@@ -38,11 +39,11 @@
             <div class="media">
                 Our Social
                 <ul>
-                    <a><li><i class="fab fa-instagram" aria-hidden="true" width 100px></i></li></a>
-                    <a><li><i class="fab fa-facebook" aria-hidden="true"></i></li></a>
-                    <a><li><i class="fab fa-whatsapp-square" aria-hidden="true"></i></li></a>
-                    <a><li><i class="fab fa-twitter-square" aria-hidden="true"></i></li></a>
-                    <a><li><i class="fab fa-youtube" aria-hidden="true"></i></li></a>
+                    <a href="#"><li><i class="fab fa-instagram" aria-hidden="true" width 100px></i></li></a>
+                    <a href="#"><li><i class="fab fa-facebook" aria-hidden="true"></i></li></a>
+                    <a href="#"><li><i class="fab fa-whatsapp-square" aria-hidden="true"></i></li></a>
+                    <a href="#"><li><i class="fab fa-twitter-square" aria-hidden="true"></i></li></a>
+                    <a href="#"><li><i class="fab fa-youtube" aria-hidden="true"></i></li></a>
                 </ul>
             </div> 
         </div>
