--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <footer>
         <div class="wrapper">
             <div class="media">
-                Our Social
+                Our Social media;
                 <ul>
                     <a href="#"><li><i class="fab fa-instagram" aria-hidden="true" width 100px></i></li></a>
                     <a href="#"><li><i class="fab fa-facebook" aria-hidden="true"></i></li></a>
