--- a/about us.html
+++ b/about us.html
@@ -35,6 +35,18 @@
       email:info@taylaugh.ac.ke. <br>
       Nairobi-Kenya. <br>
       </P>
-    </footer>
+        <div class="wrapper">
+            <div class="media">
+                Our Social media;
+                <ul>
+                    <a href="#"><li><i class="fab fa-instagram" aria-hidden="true" width 100px></i></li></a>
+                    <a href="#"><li><i class="fab fa-facebook" aria-hidden="true"></i></li></a>
+                    <a href="#"><li><i class="fab fa-whatsapp-square" aria-hidden="true"></i></li></a>
+                    <a href="#"><li><i class="fab fa-twitter-square" aria-hidden="true"></i></li></a>
+                    <a href="#"><li><i class="fab fa-youtube" aria-hidden="true"></i></li></a>
+                </ul>
+            </div> 
+        </div>
+</footer>
 </body>
 </html>
